[gd_scene load_steps=21 format=3 uid="uid://cv24luk0sodu5"]

[ext_resource type="Script" path="res://src/items/projectiles/scripts/projectile.gd" id="1_ia1t0"]
[ext_resource type="Texture2D" uid="uid://bgmu0w67e3vbs" path="res://src/items/projectiles/textures/fire_ball.png" id="2_701lj"]
[ext_resource type="PackedScene" uid="uid://cw7hi3bvxpur2" path="res://src/shared/life_points.tscn" id="2_lcedw"]
[ext_resource type="Material" uid="uid://d1r7g7d23y3ox" path="res://src/shared/shaders/unshaded.tres" id="2_wpg84"]
[ext_resource type="Script" path="res://src/shared/scripts/room_notifier_2d.gd" id="4_0ra78"]
[ext_resource type="PackedScene" uid="uid://p4mmc2y4h6hq" path="res://src/shared/warm_point_light.tscn" id="4_srtqf"]

[sub_resource type="Animation" id="Animation_ngnek"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.75, 0.75)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_tuc30"]
resource_name = "death"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [true],
"method": &"destroy_projectile"
}]
}

[sub_resource type="Animation" id="Animation_sj4dy"]
resource_name = "spawn"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0.75, 0.75)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_iej5t"]
_data = {
"RESET": SubResource("Animation_ngnek"),
"death": SubResource("Animation_tuc30"),
"spawn": SubResource("Animation_sj4dy")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_iilss"]
atlas = ExtResource("2_701lj")
region = Rect2(0, 0, 17, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_o4wv3"]
atlas = ExtResource("2_701lj")
region = Rect2(17, 0, 17, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_xj2gy"]
atlas = ExtResource("2_701lj")
region = Rect2(34, 0, 17, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_7joo6"]
atlas = ExtResource("2_701lj")
region = Rect2(51, 0, 17, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_56atr"]
atlas = ExtResource("2_701lj")
region = Rect2(68, 0, 17, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_kanve"]
atlas = ExtResource("2_701lj")
region = Rect2(85, 0, 17, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_427f7"]
atlas = ExtResource("2_701lj")
region = Rect2(102, 0, 17, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_aqco8"]
atlas = ExtResource("2_701lj")
region = Rect2(119, 0, 17, 19)

[sub_resource type="SpriteFrames" id="SpriteFrames_8ilf4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iilss")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o4wv3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xj2gy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7joo6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_56atr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kanve")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_427f7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aqco8")
}],
"loop": true,
"name": &"default",
"speed": 24.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_jmpmo"]
radius = 6.0

[node name="Projectile" type="Node2D"]
script = ExtResource("1_ia1t0")

[node name="LifePoints" parent="." instance=ExtResource("2_lcedw")]
life_points = 1.0
max_life_points = 1.0
damage_multiplier_world = 1000.0
damage_multiplier_ice = 1000.0
damage_multiplier_fire = 1000.0
damage_multiplier_physical = 1000.0
damage_multiplier_lightning = 1000.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "spawn"
libraries = {
"": SubResource("AnimationLibrary_iej5t")
}

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
light_mask = 32
visibility_layer = 32
material = ExtResource("2_wpg84")
scale = Vector2(0.75, 0.75)
sprite_frames = SubResource("SpriteFrames_8ilf4")
autoplay = "default"
frame_progress = 0.824858

[node name="RkRoomNotifier2D" type="Node2D" parent="." node_paths=PackedStringArray("listen_room_node")]
script = ExtResource("4_0ra78")
listen_room_node = NodePath("..")

[node name="WarmPointLight2D" parent="." instance=ExtResource("4_srtqf")]
texture_scale = 0.25

[node name="AttackDetector" type="Area2D" parent="."]
collision_layer = 128
collision_mask = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackDetector"]
shape = SubResource("CircleShape2D_jmpmo")

[connection signal="damage_taken" from="LifePoints" to="." method="_on_life_points_damage_taken"]
[connection signal="player_leave" from="RkRoomNotifier2D" to="." method="_on_room_notifier_2d_player_leave"]
[connection signal="room_leave" from="RkRoomNotifier2D" to="." method="_on_rk_room_notifier_2d_room_leave"]
[connection signal="body_entered" from="AttackDetector" to="." method="_on_attack_detector_body_entered"]
